--- a/partials/projects/form-edit.html
+++ b/partials/projects/form-edit.html
@@ -90,21 +90,53 @@
 				<legend>Indicateurs</legend>
 				
 				<table class="table table-bordered table-stripped">
-					<tr ng-repeat="indicator in projectIndicators">
-						<td><input type="checkbox" ng-disabled="indicator.disabled" ng-model="indicator.selected" /></td>
-						<td>{{indicator.name}}</td>
+					<tr ng-repeat="indicator in chosenIndicators">
+						<td>
+							<input type="checkbox" ng-disabled="indicator.disabled" ng-model="indicator.selected" ng-change="updateFields()" />
+						</td>
+						<td>{{indicatorsById[indicator.id].name}}</td>
 					</tr>
 				</table>
 			</fieldset>
 
 			<fieldset>
 				<legend>Formulaire de saisie</legend>
-
+				
 				<table class="table table-bordered table-stripped">
-
-
+					<thead>
+						<tr>
+							<th>Sommable</th>
+							<th>Champ de saisie</th>
+							<th>Source de la valeur</th>
+							<th>Mode de saisie</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="(indicatorId, field) in form.fields" ng-if="field.type == 'manual'">
+							<td>
+								<i class="fa fa-check" style="color: green" ng-show="indicatorsById[indicatorId].sumAllowed"></i>
+								<i class="fa fa-times" style="color: red" ng-hide="indicatorsById[indicatorId].sumAllowed"></i>
+							</td>
+							<td>{{indicatorsById[indicatorId].name}}</td>
+							<td><div contenteditable ng-model="field.source"></div></td>
+							<td>
+								<div class="btn-group">
+									<button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+										Saisie manuelle
+										<span class="caret"></span>
+									</button>
+									<ul class="dropdown-menu" role="menu">
+										<li ng-repeat="(formulaId, formula) in indicatorsById[indicatorId].formulas">
+											<a ng-click="useFormula(indicatorId, formulaId)">{{formula.name}}</a>
+										</td>
+									</ul>
+								</div>
+							</td>
+						</tr>
+					</tbody>
 				</table>
 			</fieldset>
 		</form>
 	</div>
 </div>
+
