--- a/partials/projects/input-groups.html
+++ b/partials/projects/input-groups.html
@@ -8,11 +8,53 @@
 		<ol class="breadcrumb">
 			<li><a href="#projects">Projets</a></li>
 			<li><a href="#projects/{{project._id}}">{{project.name}}</a></li>
-			<li class="active">Liste des groupes d'entités de saisie</li>
+			<li class="active">Groupes d'activité</li>
 		</ol>
 
-	
-		implement me!
+		<table class="table table-bordered table-stripped table-condensed">
+			<thead>
+				<tr>
+					<th>Nom</th>
+					<th>Membres</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="inputGroup in project.inputGroups">
+					<td>{{inputGroup.name}}</td>
+					<td>
+						<ui-select multiple ng-model="inputGroup.members" theme="bootstrap">
+							<ui-select-match placeholder="">
+								{{$item.name}}
+							</ui-select-match>
+							<ui-select-choices repeat="inputEntity.id as inputEntity in project.inputEntities">
+								{{inputEntity.name}}
+							</ui-select-choices>
+						</ui-select>
+					</td>
+					<td>
+						<button class="btn btn-default btn-xs">
+							Voir les statistiques
+						</button>
 
+						<button class="btn btn-danger btn-xs" ng-click="delete(inputGroup)">
+							Supprimer
+						</button>
+					</td>
+				</tr>
+			</tbody>
+			<tfoot>
+				<tr>
+					<td colspan="3">
+						<div class="input-group input-group-sm" style="width: 100%">
+							<input type="text" class="form-control" ng-model="newCenter" placeholder="Nom du nouveau groupe" ng-enter="create()">
+							<span class="input-group-btn">
+								<button class="btn btn-default" ng-click="create()">Ajouter</button>
+							</span>
+						</div>
+					</td>
+				</tr>
+			</tfoot>
+		</table>
 	</div>
 </div>
