--- a/partials/projects/input-list.html
+++ b/partials/projects/input-list.html
@@ -1,19 +1,24 @@
 <div class="row">
-	<div class="col-md-12">
+	<div class="col-md-2">
+		<ng-include src="'partials/projects/menu.html'"></ng-include>
+	</div>
 
-		Quel mois de saisie voulez-vous consulter?
-		<input type="month" ng-model="inputMonth" max="{{maxMonth}}" class="form-control" ng-change="reload()" />
+	<div class="col-md-10">
 
-		<hr/>
+		<ol class="breadcrumb">
+			<li><a href="#projects">Projets</a></li>
+			<li><a href="#projects/{{project._id}}">{{project.name}}</a></li>
+			<li class="active">Saisies en attente</li>
+		</ol>
 
-		<input type="checkbox" ng-model="showFinished" id="show-finished" />
-		<label for="show-finished">Montrer les saisies terminées</label>
+		<input type="checkbox" id="see-all-input" ng-model="seeAll" />
+		<label for="see-all-input">Voir toutes les saisies</label>
 
 		<table class="table table-bordered table-stripped table-condensed">
 			<thead>
 				<tr>
 					<th>Fait</th>
-					<th>Projet</th>
+					<th>Mois</th>
 					<th>Lieux d'activité</th>
 					<th>Formulaire</th>
 					<th></th>
@@ -26,10 +31,10 @@
 						   ng-class="{fa: true, 'fa-check': ok, 'fa-times': !ok}"
 						   ng-style="{color:ok?'green':'red'}"></i>
 					</td>
-					<td>{{input.projectName}}</td>
+					<td>{{input.period | amDateFormat: 'MMMM YYYY'}}</td>
 					<td>{{input.inputEntityName}}</td>
 					<td>{{input.formName}}</td>
-					<td><a href="#inputs/{{inputMonth}}/{{formId}}/{{input.inputEntityId}}">Éditer</a></td>
+					<td><a ng-click="makeInput(input)">Saisir</a></td>
 				</tr>
 			</tbody>
 			<tbody ng-if="allDone && !showFinished">
@@ -38,5 +43,6 @@
 				</tr>
 			</tbody>
 		</table>
+
 	</div>
 </div>
