Continue implementing reporting

--- a/partials/projects/input-list.html
+++ b/partials/projects/input-list.html
@@ -11,7 +11,7 @@
 			<li class="active">Saisies en attente</li>
 		</ol>
 
-		<input type="checkbox" id="see-all-input" ng-model="seeAll" />
+		<input type="checkbox" id="see-all-input" ng-model="showFinished" />
 		<label for="see-all-input">Voir toutes les saisies</label>
 
 		<table class="table table-bordered table-stripped table-condensed">
