--- a/partials/projects/form-edit.html
+++ b/partials/projects/form-edit.html
@@ -42,12 +42,13 @@
 								id="periodicity-input"
 								ng-model="form.periodicity">
 							<option value="monthly">Tous les mois</option>
+							<option value="quarterly">Tous les trimestres</option>
 							<option value="planned">Planifiée</option>
 						</select>
 					</div>
 				</div>
 
-				<div ng-if="form.periodicity == 'monthly'">
+				<div ng-if="form.periodicity == 'monthly' || form.periodicity == 'quarterly' ">
 					<div class="form-group" show-errors>
 						<label for="periodicity" class="col-sm-2 control-label">Début</label>
 						<div class="col-sm-10">
@@ -136,6 +137,10 @@
 					</tbody>
 				</table>
 			</fieldset>
+
+			<br /><br />
+			<button ng-click="save()" ng-disabled="projectForm.$invalid || isUnchanged()" class="btn btn-primary">Sauvegarder</button>
+			<button ng-click="reset()" class="btn btn-default">Réinitialiser</button>
 		</form>
 	</div>
 </div>
