--- a/partials/indicators/edit.html
+++ b/partials/indicators/edit.html
@@ -65,6 +65,19 @@
 					</div>
 				</div>
 
+				<div class="form-group" show-errors>
+					<label for="input-unit" class="col-sm-2 control-label">Unité</label>
+					<div class="col-sm-10">
+						<select id="input-unit"
+								name="unit"
+								ng-model="indicator.unit"
+								class="form-control">
+							<option value="">Autre</option>
+							<option value="%">Pour cent (%)</option>
+							<option value="‰">Pour mille (‰)</option>
+						</select>
+					</div>
+				</div>
 			</fieldset>
 
 			<fieldset>
